# Tx_tc_inquiry

./: .gitignore  LICENSE  README.md  check_output.py  check_output_wyatt.py  check_wyatt_in_desc.py  clean_and_rerun.py  cli_and_api.md  config.yaml  data_models.md  debug_embedded_names.py  debug_test_cases.py  demo_html_parser.py  enhanced_html_parser_guide.md  extensibility_and_enhancements.md  extract_raw_text.py  fix_documentation.md  html_parser_guide.md  implementation_plan.md  mongodb_integration.md  output_formats.md  parser_fix_summary.md  parser_improvements_final.md  parser_improvements_summary.md  parsing_improvements.md  parsing_state_machine.md  pdf_extraction_pipeline.md  project_structure.md  project_summary.md  pyproject.toml  pytest.ini  regenerate_output.py  run_embedded_names_test.py  setup.py  test_all.py  test_api_mock.py  test_api_mock_smith.py  test_api_sample.py  test_complex_parser.py  test_debug.py  (+15 more)
arrestx/: __init__.py  __main__.py  api.py  cli.py  config.py  html_parser.py  html_parser_enhanced.py  log.py  model.py  ocr.py  parser.py  pdfio.py  ui.py  web.py  writers.py
examples/: basic_usage.py  extract_report_date.py  full_extraction_demo.py  mongodb_integration.py  name_search_demo.py  web_retrieval.py
reports/: README.md  complex_sample.txt  sample.txt
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_embedded_names.py  test_embedded_names_sample.py  test_helpers.py  test_html_parser.py  test_log.py  test_model.py  test_mongo.py  test_ocr.py  test_parser.py  test_pdfio.py  test_web.py  test_web_fetch.py  (+3 more)
(+4 files in other folders)
