[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrestx"
version = "0.1.0"
description = "Extract structured arrest records from county jail book-in PDF reports"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pdfplumber>=0.7.0",
    "pytesseract>=0.3.8",
    "pdf2image>=1.16.0",
    "pydantic>=1.9.0",
    "typer>=0.4.0",
    "pyyaml>=6.0",
    "pymongo>=4.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.1.0",
    "isort>=5.10.0",
    "mypy>=0.931",
]

[project.scripts]
arrestx = "arrestx.cli:main"

[tool.setuptools]
packages = ["arrestx"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true